# DeepSeekChat

./: .gitignore  CMakeLists.txt  MainWindow.h  package.json  python_interface.py  readme.md  speakers.json
server/: index.js  package.json
server/services/: GMIApiService.js
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  python_interface.py
